--- a/angular.json
+++ b/angular.json
@@ -10,8 +10,9 @@
       "sourceRoot": "src",
       "prefix": "app",
       "i18n": {
+        "sourceLocale": "en-US",
         "locales": {
-          "fr": "src/locale/messages.fr.xlf"
+          "fr-FR": "src/locale/messages.fr.xlf"
         }
       },
       "architect": {
